--- a/.github/workflows/user-service-build-deploy.yaml
+++ b/.github/workflows/user-service-build-deploy.yaml
@@ -1,6 +1,6 @@
 name: User Service Docker Build Deploy
 on:
-  pull_request:
+  push:
     branches: [ master ]
 jobs:
   build:
@@ -12,12 +12,12 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.USER_SERVICE_DOCKER_USERNAME }}
-        password: ${{ secrets.USER_SERVICE_DOCKER_ACCESS_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: Dockerfile
+        file: user-service/Dockerfile
         push: true
-        tags: ${{ secrets.USER_SERVICE_DOCKER_USERNAME }}/ctse-user-service:${{ github.sha }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/example-test:${{ github.sha }}
