init docker action update

--- a/.github/workflows/user-service-build-deploy.yaml
+++ b/.github/workflows/user-service-build-deploy.yaml
@@ -18,6 +18,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: user-service/Dockerfile
+        file: Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/example-test:${{ github.sha }}
