--- a/.github/workflows/user-service-build-deploy.yaml
+++ b/.github/workflows/user-service-build-deploy.yaml
@@ -7,14 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: run shell script
+      run: echo commit hash is ${{ github.sha }}
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
