--- a/.github/workflows/user-service-build-deploy.yaml
+++ b/.github/workflows/user-service-build-deploy.yaml
@@ -9,6 +9,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: run shell script
       run: echo commit hash is ${{ github.sha }}
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots package
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
